--- a/hello.html
+++ b/hello.html
@@ -16,8 +16,8 @@
 			Hello AI108! Bienvenue dans cette formation GIT !
 		</div>
 		<div>
-		<p>
-		</p>
+	<h1> Ma description </h1>	
+		<p> Je m'appelle Orane, je vous souhaite la bienvenue ! </p>
 		</div>
 		
 		
